# sem7_os_lab5

./: .gitignore  CMakeLists.txt  Taskfile.yml
src/ports/linux/: server.c
src/ports/win/: server.c
